Fix food tray z-index

--- a/public/css/inventory.styl
+++ b/public/css/inventory.styl
@@ -46,6 +46,7 @@ menu.pets div
   width:30%
   height: 50%
   overflow-y: scroll
+  z-index: 1
 
 .inventory-list
   p
